--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-      "name": "ewma-test",
+      "name": "moviedb-test",
       "private": true,
       "version": "0.0.0",
       "type": "module",
       "scripts": {
             "dev": "vite",
-            "build": "vue-tsc && vite build",
+            "build": "vite build",
             "preview": "vite preview"
       },
       "dependencies": {
-            "@types/node": "^18.11.18",
-            "pinia": "^2.0.29",
+            "axios": "^1.3.1",
+            "pinia": "^2.0.30",
             "vue": "^3.2.45",
+            "vue-axios": "^3.5.2",
             "vue-router": "^4.1.6"
       },
       "devDependencies": {
@@ -21,8 +22,6 @@
             "prettier": "^2.8.3",
             "prettier-plugin-tailwindcss": "^0.2.2",
             "tailwindcss": "^3.2.4",
-            "typescript": "^4.9.3",
-            "vite": "^4.0.0",
-            "vue-tsc": "^1.0.11"
+            "vite": "^4.0.0"
       }
 }
